--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "httpx>=0.28.1",
+    "mcp>=1.10.1",
     "python-dotenv>=1.1.1",
     "rich>=14.0.0",
     "tomlkit>=0.13.3",
