--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "ga-cli"
-version = "0.1.0"
-description = "Add your description here"
+name = "generalanalysis"
+version = "0.1.3"
+description = "MCP Client Guardrails"
 readme = "README.md"
 authors = [
-    { name = "Alan Wu", email = "lunw1024@gmail.com" }
+    { name = "Alan Wu", email = "alan@omni-research.com" }
 ]
 requires-python = ">=3.13"
 dependencies = [
@@ -16,7 +16,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ga = "ga_cli.main:main"
+ga = "generalanalysis.main:main"
 
 [build-system]
 requires = ["hatchling"]
